@@ -3,7 +3,7 @@
 <div id="page_title" style="margin-bottom:8px;"><?php echo $this->lang->line('reports_reports'); ?></div>
 <div id="welcome_message"><?php echo $this->lang->line('reports_welcome_message'); ?>
 <ul id="report_list">
-	<li><h3>Graphical Reports</h3>
+	<li><h3><?php echo $this->lang->line('reports_graphical_reports'); ?></h3>
 		<ul>
 			<li><a href="<?php echo site_url('reports/graphical_summary_sales');?>"><?php echo $this->lang->line('reports_sales'); ?></a></li>
 			<li><a href="<?php echo site_url('reports/graphical_summary_categories');?>"><?php echo $this->lang->line('reports_categories'); ?></a></li>
@@ -16,7 +16,7 @@
 		</ul>
 	</li>
 	
-	<li><h3>Summary Reports</h3>
+	<li><h3><?php echo $this->lang->line('reports_summary_reports'); ?></h3>
 		<ul>
 			<li><a href="<?php echo site_url('reports/summary_sales');?>"><?php echo $this->lang->line('reports_sales'); ?></a></li>
 			<li><a href="<?php echo site_url('reports/summary_categories');?>"><?php echo $this->lang->line('reports_categories'); ?></a></li>
@@ -28,14 +28,21 @@
 			<li><a href="<?php echo site_url('reports/summary_discounts');?>"><?php echo $this->lang->line('reports_discounts'); ?></a></li>
 		</ul>
 	</li>
-
-	<li><h3>Detailed Reports</h3>
+	
+	<li><h3><?php echo $this->lang->line('reports_detailed_reports'); ?></h3>
 		<ul>
 			<li><a href="<?php echo site_url('reports/detailed_sales');?>"><?php echo $this->lang->line('reports_sales'); ?></a></li>
 			<li><a href="<?php echo site_url('reports/specific_customer');?>"><?php echo $this->lang->line('reports_customer'); ?></a></li>
 			<li><a href="<?php echo site_url('reports/specific_employee');?>"><?php echo $this->lang->line('reports_employee'); ?></a></li>
 		</ul>
 	
+	</li>
+	
+	<li><h3><?php echo $this->lang->line('reports_inventory_reports'); ?></h3>
+		<ul>
+			<li><a href="<?php echo site_url('reports/inventory_low');?>"><?php echo $this->lang->line('reports_low_inventory'); ?></a></li>
+			<li><a href="<?php echo site_url('reports/inventory_summary');?>"><?php echo $this->lang->line('reports_inventory_summary'); ?></a></li>
+		</ul>
 	</li>
 </ul>
 <?php
